# advent-of-code-2021

./: CMakeLists.txt  README.md  vcpkg.json
src/common/: CMakeLists.txt  input_filename.cpp  input_filename.hpp  read_input.cpp  read_input.hpp
src/day01/: CMakeLists.txt  day01.cpp  day01.hpp  main.cpp  tests.cpp
src/day02/: CMakeLists.txt  day02.cpp  day02.hpp  main.cpp  tests.cpp
src/day03/: CMakeLists.txt  day03.cpp  day03.hpp  main.cpp  tests.cpp
src/day04/: CMakeLists.txt  board.cpp  board.hpp  day04.cpp  day04.hpp  main.cpp  tests.cpp
src/shared/: CMakeLists.txt  read_input.cpp
